// SPDX-FileCopyrightText: 2024 Shun Sakai
//
// SPDX-License-Identifier: Apache-2.0 OR MIT

= Changelog
:toc: preamble
:project-url: https://github.com/sorairolake/bit-int
:compare-url: {project-url}/compare
:issue-url: {project-url}/issues
:pull-request-url: {project-url}/pull

All notable changes to this project will be documented in this file.

The format is based on https://keepachangelog.com/[Keep a Changelog], and this
project adheres to https://semver.org/[Semantic Versioning].

== {compare-url}/v0.1.1\...HEAD[Unreleased]

=== Added

* Add `BitInt::checked_ilog` and `BitUint::checked_ilog`
  ({pull-request-url}/12[#12])
* Add `BitInt::checked_ilog2` and `BitUint::checked_ilog2`
  ({pull-request-url}/12[#12])
* Add `BitInt::checked_ilog10` and `BitUint::checked_ilog10`
  ({pull-request-url}/12[#12])

=== Changed

* Bump MSRV to 1.67.0 ({pull-request-url}/12[#12])

== {compare-url}/v0.1.0\...v0.1.1[0.1.1] - 2024-11-14

=== Added

* Implement `BitInt::checked_rem` and `BitUint::checked_rem`
  ({pull-request-url}/7[#7])
* Implement `From<BitInt>` and `From<BitUint>` for the underlying type
  ({pull-request-url}/8[#8])
* Implement `BitInt::checked_neg` and `BitUint::checked_neg`
  ({pull-request-url}/10[#10])
* Implement `BitInt::checked_abs` ({pull-request-url}/10[#10])
* Implement `BitInt::checked_pow` and `BitUint::checked_pow`
  ({pull-request-url}/10[#10])

== {project-url}/releases/tag/v0.1.0[0.1.0] - 2024-11-12

=== Added

* Initial release