@@ -105,6 +105,30 @@ macro_rules! impl_ops {
                 }
             }
 
+            /// Calculates the quotient of Euclidean division of `self` by `rhs`.
+            ///
+            /// Returns [`None`] if `rhs` is `0`.
+            ///
+            /// # Examples
+            ///
+            /// ```
+            /// # use bit_int::BitUint;
+            /// #
+            #[doc = concat!("let n = BitUint::<", stringify!($T), ", 6>::new(42).unwrap();")]
+            ///
+            /// assert_eq!(n.checked_div_euclid(2).map(BitUint::get), Some(21));
+            /// assert!(n.checked_div_euclid(0).is_none());
+            /// ```
+            #[must_use]
+            #[inline]
+            pub const fn checked_div_euclid(self, rhs: $T) -> Option<Self> {
+                if let Some(result) = self.get().checked_div_euclid(rhs) {
+                    Self::new(result)
+                } else {
+                    None
+                }
+            }
+
             /// Calculates the remainder when `self` is divided by `rhs`.
             ///
             /// Returns [`None`] if `rhs` is `0`.
@@ -123,6 +147,30 @@ macro_rules! impl_ops {
             #[inline]
             pub const fn checked_rem(self, rhs: $T) -> Option<Self> {
                 if let Some(result) = self.get().checked_rem(rhs) {
+                    Self::new(result)
+                } else {
+                    None
+                }
+            }
+
+            /// Calculates the multiplication of `self` and `rhs`.
+            ///
+            /// Returns [`None`] if `rhs` is `0`.
+            ///
+            /// # Examples
+            ///
+            /// ```
+            /// # use bit_int::BitUint;
+            /// #
+            #[doc = concat!("let n = BitUint::<", stringify!($T), ", 3>::new(5).unwrap();")]
+            ///
+            /// assert_eq!(n.checked_rem_euclid(2).map(BitUint::get), Some(1));
+            /// assert!(n.checked_rem_euclid(0).is_none());
+            /// ```
+            #[must_use]
+            #[inline]
+            pub const fn checked_rem_euclid(self, rhs: $T) -> Option<Self> {
+                if let Some(result) = self.get().checked_rem_euclid(rhs) {
                     Self::new(result)
                 } else {
                     None
@@ -209,6 +257,58 @@ macro_rules! impl_ops {
             #[inline]
             pub const fn checked_neg(self) -> Option<Self> {
                 if let Some(result) = self.get().checked_neg() {
+                    Self::new(result)
+                } else {
+                    None
+                }
+            }
+
+            /// Shifts `self` left by `rhs` bits.
+            ///
+            /// Returns [`None`] if `rhs` is larger than or equal to the number of bits
+            /// in `self`.
+            ///
+            /// # Examples
+            ///
+            /// ```
+            /// # use bit_int::BitUint;
+            /// #
+            #[doc = concat!("let n = BitUint::<", stringify!($T), ", 5>::new(0x01).unwrap();")]
+            #[doc = concat!("let m = BitUint::<", stringify!($T), ", 5>::new(0x10).unwrap();")]
+            ///
+            /// assert_eq!(n.checked_shl(4).map(BitUint::get), Some(0x10));
+            /// assert!(m.checked_shl(129).is_none());
+            #[doc = concat!("assert_eq!(m.checked_shl(", stringify!($T), "::BITS - 1).map(BitUint::get), Some(0x00));")]
+            /// ```
+            #[must_use]
+            #[inline]
+            pub const fn checked_shl(self, rhs: u32) -> Option<Self> {
+                if let Some(result) = self.get().checked_shl(rhs) {
+                    Self::new(result)
+                } else {
+                    None
+                }
+            }
+
+            /// Shifts `self` right by `rhs` bits.
+            ///
+            /// Returns [`None`] if `rhs` is larger than or equal to the number of bits
+            /// in `self`.
+            ///
+            /// # Examples
+            ///
+            /// ```
+            /// # use bit_int::BitUint;
+            /// #
+            #[doc = concat!("let n = BitUint::<", stringify!($T), ", 5>::new(0x10).unwrap();")]
+            ///
+            /// assert_eq!(n.checked_shr(4).map(BitUint::get), Some(0x01));
+            /// assert!(n.checked_shr(129).is_none());
+            /// ```
+            #[must_use]
+            #[inline]
+            pub const fn checked_shr(self, rhs: u32) -> Option<Self> {
+                if let Some(result) = self.get().checked_shr(rhs) {
                     Self::new(result)
                 } else {
                     None
@@ -305,6 +405,19 @@ mod tests {
     }
 
     #[test]
+    fn checked_div_euclid() {
+        let n = BitU8::<6>::new(42).unwrap();
+
+        assert_eq!(n.checked_div_euclid(2).map(BitU8::get), Some(21));
+        assert!(n.checked_div_euclid(0).is_none());
+    }
+
+    #[test]
+    const fn checked_div_euclid_is_const_fn() {
+        const _: Option<BitU8<6>> = BitU8::<6>::MAX.checked_div_euclid(0);
+    }
+
+    #[test]
     fn checked_rem() {
         let n = BitU8::<3>::new(5).unwrap();
 
@@ -315,6 +428,19 @@ mod tests {
     #[test]
     const fn checked_rem_is_const_fn() {
         const _: Option<BitU8<3>> = BitU8::<3>::MAX.checked_rem(0);
+    }
+
+    #[test]
+    fn checked_rem_euclid() {
+        let n = BitU8::<3>::new(5).unwrap();
+
+        assert_eq!(n.checked_rem_euclid(2).map(BitU8::get), Some(1));
+        assert!(n.checked_rem_euclid(0).is_none());
+    }
+
+    #[test]
+    const fn checked_rem_euclid_is_const_fn() {
+        const _: Option<BitU8<3>> = BitU8::<3>::MAX.checked_rem_euclid(0);
     }
 
     #[test]
@@ -366,6 +492,34 @@ mod tests {
     #[test]
     const fn checked_neg_is_const_fn() {
         const _: Option<BitU8<1>> = BitU8::<1>::MAX.checked_neg();
+    }
+
+    #[test]
+    fn checked_shl() {
+        let n = BitU8::<5>::new(0x01).unwrap();
+        let m = BitU8::<5>::new(0x10).unwrap();
+
+        assert_eq!(n.checked_shl(4).map(BitU8::get), Some(0x10));
+        assert!(m.checked_shl(129).is_none());
+        assert_eq!(m.checked_shl(u8::BITS - 1).map(BitU8::get), Some(0x00));
+    }
+
+    #[test]
+    const fn checked_shl_is_const_fn() {
+        const _: Option<BitU8<5>> = BitU8::<5>::MIN.checked_shl(129);
+    }
+
+    #[test]
+    fn checked_shr() {
+        let n = BitU8::<5>::new(0x10).unwrap();
+
+        assert_eq!(n.checked_shr(4).map(BitU8::get), Some(0x01));
+        assert!(n.checked_shr(129).is_none());
+    }
+
+    #[test]
+    const fn checked_shr_is_const_fn() {
+        const _: Option<BitU8<5>> = BitU8::<5>::MIN.checked_shr(129);
     }
 
     #[test]
